# car-logger

./: .env.example  .gitignore  README.md
raspberry/: 99-wifi-manager  gps-server.service  pyproject.toml  wifi-manager.conf.example
raspberry/gps_server/: camera.py  main.py  mpu6050.py
server/: gps-monitor.service  gps-web.service  pyproject.toml  sensor_map.json.example  temp-monitor.service
server/gps_monitor/: db.py  main.py  notify.py  state.py
server/gps_web/: main.py
server/gps_web/templates/: index.html  temperature.html
server/temp_monitor/: db.py  main.py
