[project]
name = "gps-server"
version = "0.1.0"
description = "ラズパイ GPS サーバ"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "gps3>=0.33.3",
    "httpx>=0.27.0",
    "smbus2>=0.4.3",
    "opencv-python-headless>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gps_server"]
